[package]
name = "rustofi"
version = "0.3"
authors = ["Kristopher Ruzic <krruzic@gmail.com>"]
edition = "2018"
license = "GPL-3.0+"
description = "Library to build simple 'Rofi User Interface' applications"
readme = "README.md"
keywords = ["gui", "rofi", "launcher", "ui"]
categories = ["gui"]
homepage = "https://github.com/krruzic/rustofi"
repository = "https://github.com/krruzic/rustofi"

[lib]
name = "rustofi"
path = "src/lib.rs"

[dependencies]
num-traits = "0.2"
num-derive = "0.2"
subprocess = "0.1.18"

[dev-dependencies]
pickledb = "0.4.0"
serde = { version = "1.0.102", features = ["derive"] }
lazy_static = "1.4.0"
